--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color:rgb(128,128 ,0)
+    background-color:rgb(244,164,96)
     }
     h1{
         color: rgb(rgb(17, 1, 1);
